--- a/text/citace.bib
+++ b/text/citace.bib
@@ -1,6 +1,7 @@
 %články
 @article{benton,
-    title = "Space radiation dosimetry in low-Earth orbit and beyond ",
+    author = "E.R Benton and E.V Benton",
+    title = "Space radiation dosimetry in low-Earth orbit and beyond",
     journaltitle = "Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms ",
     volume = "184",
     number = "1–2",
@@ -9,13 +10,12 @@
     note = "Advanced Topics in Solid State Dosimetry ",
     issn = "0168-583X",
     url = "http://www.sciencedirect.com/science/article/pii/S0168583X01007480",
-    author = "E.R Benton and E.V Benton"
 }
 
 @article{dosis,
 	author = "T. Berger and others",
 	title = "{DOSIS \& DOSIS 3D}: long-term dose monitoring onboard the Columbus Laboratory of the International Space Station {(ISS)}",
-	url= "http://dx.doi.org/10.1051/swsc/2016034",
+	url = "http://dx.doi.org/10.1051/swsc/2016034",
 	journaltitle = "J. Space Weather Space Clim.",
 	year = "2016",
 	volume = "6",
@@ -25,7 +25,6 @@
 @article{dosis2,
 	author = {{Berger, Thomas} and {Burmeister, Sönke} and {Matthiä, Daniel} and {Przybyla, Bartos} and {Reitz, Günther} and {Bilski, Pawel} and {Hajek, Michael} and {Sihver, Lembit} and {Szabo, Julianna} and {Ambrozova, Iva} and {Vanhavere, Filip} and {Gaza, Ramona} and {Semones, Edward} and {Yukihara, Eduardo G.} and {Benton, Eric R.} and {Uchihori, Yukio} and {Kodaira, Satoshi} and {Kitamura, Hisashi} and {Boehme, Matthias}},
 	title = {DOSIS \& DOSIS 3D: radiation measurements with the DOSTEL instruments onboard the Columbus Laboratory of the ISS in the years 2009–2016},
-	DOI= "10.1051/swsc/2017005",
 	url= "https://doi.org/10.1051/swsc/2017005",
 	journaltitle = {J. Space Weather Space Clim.},
 	year = 2017,
@@ -43,7 +42,7 @@ pages = "233 - 243",
 year = "2008",
 note = "",
 issn = "0939-3889",
-doi = "https://doi.org/10.1016/j.zemedi.2008.06.015",
+url = "10.1016/j.zemedi.2008.06.015",
 url = "http://www.sciencedirect.com/science/article/pii/S0939388908000792",
 author = "Guenther Reitz",
 keywords = "cosmic radiation",
@@ -85,6 +84,7 @@ keywords = "Messungen des Strahlenfeldes "
     pages={605-610},
     issn={0144-8420},
     language={English},
+    url={https://doi.org/10.1093/rpd/ncq305},
 }
 
 @phdthesis{thesisKPBrabcova,
@@ -99,27 +99,21 @@ keywords = "Messungen des Strahlenfeldes "
 
 @ARTICLE{activeDetectors,
   
-AUTHOR={Narici, Livio and Berger, Thomas and Matthiä, Daniel and Reitz, Günther},   
+AUTHOR="Narici, Livio and Berger, Thomas and Matthiä, Daniel and Reitz, Günther",   
 	 
-TITLE={Radiation Measurements Performed with Active Detectors Relevant for Human Space Exploration},    
+TITLE="Radiation Measurements Performed with Active Detectors Relevant for Human Space Exploration",    
 	
-journaltitle={Frontiers in Oncology},      
+journaltitle="Frontiers in Oncology",      
 	
-VOLUME={5},    
+VOLUME="5",    
 
-PAGES={273},    
+PAGES="273",    
 	
-YEAR={2015},      
+YEAR="2015",      
 	  
-URL={http://journal.frontiersin.org/article/10.3389/fonc.2015.00273},       
+URL="http://journal.frontiersin.org/article/10.3389/fonc.2015.00273",       
 	
-DOI={10.3389/fonc.2015.00273},      
-	
-ISSN={2234-943X},   
-   
-ABSTRACT={A reliable radiation risk assessment in space is a mandatory step for the development of countermeasures and long duration mission planning in human spaceflight.
-Research in radiobiology provides information about possible risks linked to radiation. In addition, for a meaningful risk evaluation, the radiation exposure has to be assessed to a sufficient level of accuracy. Consequently, both the radiation models predicting the risks and the measurements used to validate such models must have an equivalent precision. Corresponding measurements can be performed both with passive and active devices. The former are easier to handle, cheaper, lighter and smaller but they measure neither the time dependence of the radiation environment nor some of the details useful for a comprehensive radiation risk assessment. Active detectors provide most of these details and have been extensively used in the International Space Station (ISS).
-To easily access such an amount of data, a single point access is becoming essential. This review presents an ongoing work on the development of a tool which allows obtaining information about all relevant measurements performed with active detectors providing reliable inputs for radiation model validation.}
+ISSN="2234-943X",   
 }
 
 %kosmicke zareni
@@ -245,8 +239,7 @@ pages = "944 - 947",
 year = "2008",
 note = "Proceedings of the 15th Solid State Dosimetry (SSD15) ",
 issn = "1350-4487",
-doi = "https://doi.org/10.1016/j.radmeas.2007.11.041",
-url = "http://www.sciencedirect.com/science/article/pii/S1350448707005124",
+url = "https://doi.org/10.1016/j.radmeas.2007.11.041",
 author = "F. Spurný and I. Jadrníčková",
 keywords = "Track etch detectors (TEDs)",
 keywords = "Thermoluminescent detectors (TLDs)",
@@ -275,8 +268,7 @@ pages = "724 - 728",
 year = "2009",
 note = "Proceedings of the 24th International Conferenceon Nuclear Tracks in Solids ",
 issn = "1350-4487",
-doi = "https://doi.org/10.1016/j.radmeas.2009.10.045",
-url = "http://www.sciencedirect.com/science/article/pii/S1350448709002212",
+url = "https://doi.org/10.1016/j.radmeas.2009.10.045",
 author = "J.K. Pálfalvi",
 keywords = "Space dosimetry",
 keywords = "SSNTD",
@@ -292,7 +284,6 @@ volume = {36},
 number = {11},
 pages = {3645-3652},
 year = {1965},
-doi = {10.1063/1.1703059},
 url = {http://dx.doi.org/10.1063/1.1703059},
 eprint = {http://dx.doi.org/10.1063/1.1703059}
 }
@@ -305,7 +296,7 @@ eprint = {http://dx.doi.org/10.1063/1.1703059}
      year = {1958},
    volume = {182},
     pages = {375-377},
-      doi = {10.1038/182375a0},
+      url = {https://doi.org/10.1038/182375a0},
    adsurl = {http://adsabs.harvard.edu/abs/1958Natur.182..375Y},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
@@ -318,7 +309,7 @@ eprint = {http://dx.doi.org/10.1063/1.1703059}
      year = {2003},
    volume = {36(1-6)},
     pages = {73-81},
-      doi = {10.1016/S1350-4487(03)00099-4},
+      url = {https://doi.org/10.1016/S1350-4487(03)00099-4},
 }
 
 %CR39 wikipedie
@@ -341,8 +332,7 @@ pages = "5 - 10",
 year = "2013",
 note = "",
 issn = "0168-9002",
-doi = "https://doi.org/10.1016/j.nima.2013.03.012",
-url = "http://www.sciencedirect.com/science/article/pii/S0168900213002866",
+url = "https://doi.org/10.1016/j.nima.2013.03.012",
 author = "Kateřina Pachnerová Brabcová and Iva Ambrožová and Zlata Kolísková and Alexandr Malušek",
 keywords = "CR-39",
 keywords = "Linear energy transfer",
@@ -392,8 +382,7 @@ pages = " - ",
 year = "2016",
 note = "",
 issn = "1350-4487",
-doi = "https://doi.org/10.1016/j.radmeas.2016.12.004",
-url = "http://www.sciencedirect.com/science/article/pii/S1350448716304401",
+url = "https://doi.org/10.1016/j.radmeas.2016.12.004",
 author = "Iva Ambrožová and Kateřina Pachnerová Brabcová and Jan Kubančák and Jakub Šlegl and Raisa V. Tolochek and Olga A. Ivanova and Vyacheslav A. Shurshakov",
 keywords = "BION-M1",
 keywords = "Cosmic radiation",
@@ -475,8 +464,7 @@ pages = "84 - 93",
 year = "2013",
 note = "",
 issn = "1350-4487",
-doi = "http://dx.doi.org/10.1016/j.radmeas.2013.05.008",
-url = "http://www.sciencedirect.com/science/article/pii/S1350448713002448",
+url = "http://dx.doi.org/10.1016/j.radmeas.2013.05.008",
 author = "A. Nagamatsu and K. Murakami and K. Kitajo and K. Shimada and H. Kumagai and H. Tawara",
 keywords = "Area PADLES",
 keywords = "Exp PADLES",
@@ -508,10 +496,9 @@ volume = "35",
 number = "5",
 pages = "381 - 391",
 year = "2002",
-note = "Radiaiton on the MIR Space Station",
+note = "Radiaton on the MIR Space Station",
 issn = "1350-4487",
-doi = "http://dx.doi.org/10.1016/S1350-4487(02)00071-9",
-url = "http://www.sciencedirect.com/science/article/pii/S1350448702000719",
+url = "http://dx.doi.org/10.1016/S1350-4487(02)00071-9",
 author = "I Apáthy and S Deme and I Fehér and Y.A Akatov and G Reitz and V.V Arkhanguelski",
 }
 
@@ -524,8 +511,7 @@ pages = "311 - 315",
 year = "2005",
 note = "Proceedings of the 22nd International Conference on Nuclear Tracks in Solids",
 issn = "1350-4487",
-doi = "http://dx.doi.org/10.1016/j.radmeas.2005.02.013",
-url = "http://www.sciencedirect.com/science/article/pii/S1350448705000806",
+url = "http://dx.doi.org/10.1016/j.radmeas.2005.02.013",
 author = "N. Yasuda and K. Namiki and Y. Honma and Y. Umeshima and Y. Marumo and H. Ishii and E.R. Benton",
 keywords = "Line sensor",
 keywords = "Microscope",
