--- a/text/main.tex
+++ b/text/main.tex
@@ -2,6 +2,7 @@
 \documentclass[a4paper,12pt,oneside]{report}
 \input{parts/preamble}
 %\includeonly{parts/titlepage,parts/praktickaCast,parts/appendix,parts/zaver}
+%\includeonly{}
 \begin{document}
 \pagestyle{empty}
 
@@ -29,9 +30,9 @@
 
 %\nocite{*}
 \setstretch{1}
-\printbibliography[title=Seznam literatury]
 \markright{}
 \addcontentsline{toc}{chapter}{Seznam literatury}
+\printbibliography[title=Seznam literatury]
 
 \setstretch{1.5}
 \include{parts/appendix}
