--- a/text/parts/titlepage.tex
+++ b/text/parts/titlepage.tex
@@ -39,7 +39,7 @@ Děkuji Ing. Ivě Ambrožové, Ph.D. za vedení mé bakalářské práce, za cen
   Obor: & Dozimetrie a aplikace ionizujícího záření\\
   Druh práce: & Bakalářská práce\\
   Vedoucí práce: & Ing. Iva Ambrožová, Ph.D.\\ 
-               & Oddělení dozimetrie záření, Ústav jaderné fyziky AV ČR, v.v.i., Akademie věd České republiky\\
+               & Oddělení dozimetrie záření, Ústav jaderné fyziky AV ČR, v.v.i.\\
   Abstrakt: & Kosmické záření představuje veliký zdravotní risk při pobytu ve vesmíru. K jeho monitorování se používají i pasivní detektory, obzvláště pak termoluminiscenční detektory a detektory stop v pevné fázi. Za účelem stanovení prostorové distribuce dávky uvnitř Mezinárodní kosmické stanice proběhlo a probíhá mnoho experimentů. Patří mezi ně i experimenty DOSIS (2009--2011) a DOSIS3D (2012--doposud). Z naměřených dat lze do určité míry vyvodit závislost dávkového příkonu na řadě parametrů, např. sluneční aktivitě a nadmořské výšce. 
   %Tato měření mohou zmenšit možné ozaření lidské posádky při budoucích letech do vesmíru.
   Tato práce pojednává o složení kosmického záření v blízkém okolí Země, o výše zmíněných pasivních detektorech, o projektech DOSIS a DOSIS3D. V neposlední řadě je uvedena názorná ukázka vyhodnocení tří detektorů stop, které byly umístěny v modulu Columbus. \\
