--- a/text/parts/uvod.tex
+++ b/text/parts/uvod.tex
@@ -1,11 +1,11 @@
 \chapter*{Úvod}
 \markright{}
 \addcontentsline{toc}{chapter}{Úvod}
-Kosmické záření představuje veliké riziko pro zdraví posádek vesmírných letů, a proto je potřeba ho monitorovat. To je extrémně obtížné, protože kosmické záření tvoří mnoho primárních částic s velkým rozsahem energií a navíc závisí na řadě parametrů. Ve sluneční soustavě je tok kosmického záření např. silně ovlivňován jedenáctiletým slunečním cyklem, v blízkosti Země záleží dále na nadmořké výšce a síle magnetického pole Země v daném místě. 
+Kosmické záření představuje veliké riziko pro zdraví posádek vesmírných letů, a proto je potřeba ho monitorovat. To je extrémně obtížné, protože kosmické záření tvoří mnoho primárních částic s~velkým rozsahem energií a navíc závisí na řadě parametrů. Ve sluneční soustavě je tok kosmického záření např. silně ovlivňován jedenáctiletým slunečním cyklem, v~blízkosti Země záleží dále na nadmořké výšce a síle magnetického pole Země v~daném místě. 
 
-Za účelem zmonitorování prostorové distribuce dávky v blízkém okolí Země a její závislosti na výše uvedených parametrech bylo a je organizováno mnoho experimentů, řada z nich na Mezinárodní kosmické stanici (ISS). Jako příklad lze uvést DOSIS a na něj navazující DOSIS3D probíhající v evropském modulu Columbus, MATROSHKA-R probíhající v ruské části ISS, RAM probíhající v americké části ISS a PADLES probíhající v japonském Kibo modulu. Vzhledem k množství parametrů, na kterých jsou naměřená data závislá, a jejich časové proměnnosti musí být měření dlouhodobá (v řádu let). Výsledky z těchto experimentů pomohou mj. odhadnout rizika meziplanetárních letů (např. k Marsu) a jejich případnému snížení (např. startem letu z takové zeměpisné délky a šířky, že obdržená dávka od záření v blízkém okolí Země bude nejmenší). 
+Za účelem zmonitorování prostorové distribuce dávky v~blízkém okolí Země a její závislosti na výše uvedených parametrech bylo a je organizováno mnoho experimentů, řada z~nich na Mezinárodní kosmické stanici (ISS). Jako příklad lze uvést DOSIS a na něj navazující DOSIS3D probíhající v~evropském modulu Columbus, MATROSHKA-R probíhající v~ruské části ISS, RAM probíhající v~americké části ISS a PADLES probíhající v~japonském Kibo modulu. Vzhledem k~množství parametrů, na kterých jsou naměřená data závislá, a jejich časové proměnnosti musí být měření dlouhodobá (v~řádu let). Výsledky z~těchto experimentů pomohou mj. odhadnout rizika meziplanetárních letů (např. k~Marsu) a jejich případnému snížení (např. startem letu z~takové zeměpisné délky a šířky, že obdržená dávka od záření v~blízkém okolí Země bude nejmenší). 
 
-K měření se využívají pasivní i aktivní detektory. U pasivní složky měření převládají termoluminiscenční detektory a detektory stop v pevné fázi. Termoluminiscenční detektory měří dávku obdrženou za celou dobu měření. Pomocí detektorů stop lze určit lineární přenos energie ($\LET$) primárních i sekundárních částic, které mají $\LET$ větší než přibližně 10 keV/$\mu$m, a tím je možné vytvořit $\LET$ spektrum pole záření v místě měření. Z $\LET$ částice je možné určit další veličiny.
+K~měření se využívají pasivní i aktivní detektory. U~pasivní složky měření převládají termoluminiscenční detektory a detektory stop v~pevné fázi. Termoluminiscenční detektory měří dávku obdrženou za celou dobu měření. Pomocí detektorů stop lze určit lineární přenos energie ($\LET$) primárních i sekundárních částic, které mají $\LET$ větší než přibližně 10 keV/$\mu$m, a tím je možné vytvořit $\LET$ spektrum pole záření v~místě měření. Z~$\LET$ částice je možné určit další veličiny.
 
-Tato práce pojednává nejprve o kosmickém záření v blízkém okolí Země, tj. o jeho zdrojích a o faktorech, které ho ovliňují. Druhá kapitola se zaměřuje na termoluminiscenční detektory a detektory stop. Je zde rozebrána podstata měření detektory stop a způsob jejich vyhodnocování. Třetí kapitola zmiňuje stručné informace o Mezinárodní kosmické stanici. Ve čtvrté kapitole jsou podrobně popsány experimenty DOSIS a DOSIS3D, tzn. jejich průběh (s vývojem nadmořské výšky ISS a sluneční aktivity), používané detektory, jejich rozmístění. Dostupné výsledky byly srovnány z několika hledisek, např. pro různé časové úseky, různé umístění detektorů; také proběhlo porovnání s výsledky
-z jiných experimentů. V poslední praktické části byla na úvod nastíněna metodika vyhodnocování detektorů stop používaných Oddělením dozimetrie záření Ústavu jaderné fyziky AVČR, poté zde bylo rozebráno mnou provedené vyhodnocení několika detektorů stop.
+Tato práce pojednává nejprve o~kosmickém záření v~blízkém okolí Země, tj. o~jeho zdrojích a o~faktorech, které ho ovliňují. Druhá kapitola se zaměřuje na termoluminiscenční detektory a detektory stop. Je zde rozebrána podstata měření detektory stop a způsob jejich vyhodnocování. Třetí kapitola zmiňuje stručné informace o~Mezinárodní kosmické stanici. Ve čtvrté kapitole jsou podrobně popsány experimenty DOSIS a DOSIS3D, tzn. jejich průběh (s~vývojem nadmořské výšky ISS a sluneční aktivity), používané detektory, jejich rozmístění. Dostupné výsledky byly srovnány z~několika hledisek, např. pro různé časové úseky, různé umístění detektorů; také proběhlo porovnání s~výsledky
+z~jiných experimentů. V~poslední praktické části byla na úvod nastíněna metodika vyhodnocování detektorů stop používaných Oddělením dozimetrie záření Ústavu jaderné fyziky AVČR, poté zde bylo rozebráno mnou provedené vyhodnocení několika detektorů stop.
