--- a/text/parts/zaver.tex
+++ b/text/parts/zaver.tex
@@ -1,13 +1,13 @@
 \chapter*{Závěr}
 \markright{Závěr}
 \addcontentsline{toc}{chapter}{Závěr}
-V této práci byla probrána problematika kosmického záření v blízkém okolí Země a jeho monitorování. Bylo pojednáno o pasivních detektorech, které se využívají k jeho detekci. Stručně jsem zmínil jejich způsob fungování a podrobně jsem rozepsal metodiku vyhodnocování detektorů používaných Oddělením dozimetrie záření Ústavu jaderné fyziky AVČR. Ve stěžejní části byly popsány experimenty DOSIS a DOSIS3D, které se zabývají stanovením prostorové distribuce dávky v ISS modulu Columbus. Jejich výsledky byly konfrontovány s daty jiných, podobných experimentů. Nakonec jsem vyhodnotil tři detektory stop TASTRAK, které byly umístěné od prosince 2015 do června 2016 v rámci experimentu DOSIS3D v modulu Columbus. K tomuto účelu jsem napsal skript v programovacím jazyce Python.
-Vyhodnocování detektorů jsem důsledně popsal. Výsledkem je vypočítaná celková absorbovaná dávka a dávkový ekvivalent (resp. příslušné příkony) z každého detektoru. Pro každý detektor
-jsem dále vytvořil čtyři $\LET$ spektra -- pro počet detekovaných částic, pro diferenciální fluenci, pro dávku a pro dávkový ekvivalent. Dávkové příkony prvního, druhého a třetího detektoru jsou $\dot{D}_1=(29\pm6)\ \mu$Gy/den, $\dot{D}_2=(27\pm5)\ \mu$Gy/den a $\dot{D}_3=(23\pm5)\ \mu$Gy/den. Příkony dávk. ekvivalentů z odpovídajících detektorů jsou $\dot{H}_1=(470\pm90)\ \mu$Sv/den, $\dot{H}_2=(500\pm100)\ \mu$Sv/den, $\dot{H}_3=(410\pm80)\ \mu$Sv/den. Dávkové příkony z termoluminiscenčních detektorů vycházejí zhruba o jeden řád vyšší než $\dot{D}_{1,2,3}$. Tento rozdíl je dán necitlivostí vyhodnocených detektorů stop vůči částicím s $\LET<10$ keV/$\mu$m, nižší účinností TLD vůči částicím s vyšším $\LET$ a také tím, že vyhodnocené detektory stop byly leptány pouze jednou, tj. byly zobrazeny pouze některé stopy. Kosmické záření je
-hlavně tvořeno protony (malé $\LET$), nicméně částice s velkým $\LET$ přispívají k $H$ nezanedbatelně (podobně nebo více jak nízké částice). $\LET$ spektra jsou k vidění v předchozí kapitole.
+V~této práci byla probrána problematika kosmického záření v~blízkém okolí Země a jeho monitorování. Bylo pojednáno o~pasivních detektorech, které se využívají k~jeho detekci. Stručně jsem zmínil jejich způsob fungování a podrobně jsem rozepsal metodiku vyhodnocování detektorů používaných Oddělením dozimetrie záření Ústavu jaderné fyziky AVČR. Ve stěžejní části byly popsány experimenty DOSIS a DOSIS3D, které se zabývají stanovením prostorové distribuce dávky v~ISS modulu Columbus. Výsledky z~TLD byly konfrontovány s~daty jiných, podobných experimentů. Nakonec jsem vyhodnotil tři detektory stop TASTRAK, které byly umístěné od prosince 2015 do června 2016 v~rámci experimentu DOSIS3D v~modulu Columbus. K~tomuto účelu jsem napsal skript v~programovacím jazyce Python.
+Vyhodnocování detektorů jsem důsledně popsal. Výsledkem je vypočítaná absorbovaná dávka a dávkový ekvivalent (resp. příslušné příkony) z~každého detektoru. Pro každý detektor
+jsem dále vytvořil čtyři $\LET$ spektra -- pro počet detekovaných částic, pro diferenciální fluenci, pro dávku a~pro dávkový ekvivalent. Dávkové příkony prvního, druhého a třetího detektoru jsou $\dot{D}_1=(29\pm6)\ \mu$Gy/den, $\dot{D}_2=(27\pm5)\ \mu$Gy/den a $\dot{D}_3=(23\pm5)\ \mu$Gy/den. Příkony dávk. ekvivalentů z~odpovídajících detektorů jsou $\dot{H}_1=(470\pm90)\ \mu$Sv/den, $\dot{H}_2=(500\pm100)\ \mu$Sv/den, $\dot{H}_3=(410\pm80)\ \mu$Sv/den. Dávkové příkony z~termoluminiscenčních detektorů vycházejí zhruba o~jeden řád vyšší než $\dot{D}_{1,2,3}$. Tento rozdíl je dán necitlivostí vyhodnocených detektorů stop vůči částicím s~$\LET<10$ keV/$\mu$m, nižší účinností TLD vůči částicím s~vyšším $\LET$ a také tím, že vyhodnocené detektory stop byly leptány pouze jednou, tj. byly zobrazeny pouze některé stopy. Kosmické záření je
+hlavně tvořeno protony (malé $\LET$), nicméně částice s~velkým $\LET$ přispívají k~$H$ nezanedbatelně (podobně nebo více jak nízké částice). $\LET$ spektra jsou k~vidění v~předchozí kapitole.
 
-V budoucnosti se budou detektory stop leptat podruhé, čímž se zobrazí další stopy. Vypočte se opět dávka, dávk. ekvivalent, a poté se přičtou k výsledkům prvního leptání. Kompletní výsledky z detektorů stop se dále zkombinují s výsledky z TLD, a tak se určí celková absorbovaná dávka a dávk. ekvivalent. 
+V~budoucnosti se budou detektory stop leptat podruhé, čímž se zobrazí další stopy. Vypočte se opět dávka, dávk. ekvivalent, a poté se přičtou k~výsledkům prvního leptání. Kompletní výsledky z~detektorů stop se dále zkombinují s~výsledky z~TLD, a tak se určí celková absorbovaná dávka a dávk. ekvivalent. 
 
-Dosavadní výsledky experimentů DOSIS a DOSIS3D poukazují na nutnost dlouhodobého souvislého měření kosmického záření v blízkém okolí Země, mají-li být prozkoumány všechny vlivy na jeho tok daným místem a na velikost obdržených dávek v daném místě.
+Dosavadní výsledky experimentů DOSIS a DOSIS3D poukazují na nutnost dlouhodobého souvislého měření kosmického záření v~blízkém okolí Země, mají-li být prozkoumány všechny vlivy na jeho tok daným místem a na velikost obdržených dávek v~daném místě.
 
-Cílem této práce bylo udělat rešerši na problematiku kosmického záření v blízkém okolí Země a jeho monitorování pasivními detektory, seznámit se podrobně s probíhajícími experimenty zkoumající kosmické záření v blízkosti Země (hlavně s DOSIS a DOSIS3D), obeznámit se s metodikou a vyhodnocováním detektorů stop, analyzovat několik detektorů. Všeho bylo dosaženo. 
+Cílem této práce bylo udělat rešerši na problematiku kosmického záření v~blízkém okolí Země a jeho monitorování pasivními detektory, seznámit se podrobně s~probíhajícími experimenty zkoumající kosmické záření v~blízkosti Země (hlavně s~DOSIS a DOSIS3D), obeznámit se s~metodikou a vyhodnocováním detektorů stop, analyzovat několik detektorů. Všeho bylo dosaženo. 
